--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     ],
     "prettier": {
         "trailingComma": "es5",
-        "semi": false,
+        "semi": true,
         "singleQuote": true,
         "useTabs": false,
         "quoteProps": "consistent",
@@ -52,11 +52,12 @@
         "youch-terminal": "^2.1.5"
     },
     "dependencies": {
+        "@adonisjs/auth": "^8.2.2",
         "@adonisjs/core": "^5.8.6",
         "@adonisjs/lucid": "^18.1.1",
         "@adonisjs/repl": "^3.1.11",
         "luxon": "^3.0.3",
-        "mysql": "^2.18.1",
+        "mysql2": "^2.3.3",
         "proxy-addr": "^2.0.7",
         "reflect-metadata": "^0.1.13",
         "source-map-support": "^0.5.21"
