--- a/.env.example
+++ b/.env.example
@@ -25,3 +25,6 @@ SMTP_HOST=smtp.mailtrap.io
 SMTP_PORT=2525
 SMTP_USERNAME=582712a9407e43
 SMTP_PASSWORD=dc53d65d8b1a67
+
+# MAILGUN_API_KEY=<mailgun-api-key>
+# MAILGUN_DOMAIN=<your-domain>
