--- a/package.json
+++ b/package.json
@@ -55,8 +55,10 @@
         "@adonisjs/auth": "^8.2.2",
         "@adonisjs/core": "^5.8.6",
         "@adonisjs/lucid": "^18.1.1",
+        "@adonisjs/mail": "^8.1.2",
         "@adonisjs/repl": "^3.1.11",
         "luxon": "^3.0.3",
+        "mjml": "^4.13.0",
         "mysql2": "^2.3.3",
         "phc-argon2": "^1.1.3",
         "proxy-addr": "^2.0.7",
