--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,8 @@
             "@adonisjs/repl",
             "@japa/preset-adonis/build/adonis-typings",
             "@adonisjs/lucid",
-            "@adonisjs/auth"
+            "@adonisjs/auth",
+            "@adonisjs/mail"
         ]
     }
 }
